--- a/Bannerlord.ShipmasterReworked/Bannerlord.ShipmasterReworked.csproj
+++ b/Bannerlord.ShipmasterReworked/Bannerlord.ShipmasterReworked.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Bannerlord.BUTRModule.Sdk/1.1.0.124">
+﻿<Project Sdk="Bannerlord.BUTRModule.Sdk/1.1.0.124">
 
   <PropertyGroup>
     <Version>0.0.1</Version>
