--- a/Bannerlord.ShipmasterReworked/Bannerlord.ShipmasterReworked.csproj
+++ b/Bannerlord.ShipmasterReworked/Bannerlord.ShipmasterReworked.csproj
@@ -31,7 +31,7 @@
 
   <!-- Development Variables -->
   <PropertyGroup>
-    <HarmonyVersion>2.2.2</HarmonyVersion>
+    <HarmonyVersion>2.4.2</HarmonyVersion>
     <HarmonyExtensionsVersion>3.2.0.77</HarmonyExtensionsVersion>
     <!--
     <BUTRSharedVersion>3.0.0.135</BUTRSharedVersion>
@@ -45,8 +45,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="NavalDLC">
+    <Reference Include="NavalDLC" PrivateAssets="all" IncludeAssets="compile">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Mount &amp; Blade II Bannerlord\Modules\NavalDLC\bin\Win64_Shipping_Client\NavalDLC.dll</HintPath>
+      <Private>false</Private>
     </Reference>
   </ItemGroup>
   
