--- a/Bannerlord.ShipmasterReworked/Bannerlord.ShipmasterReworked.csproj
+++ b/Bannerlord.ShipmasterReworked/Bannerlord.ShipmasterReworked.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" PrivateAssets="all" IncludeAssets="compile" />
     <PackageReference Include="BUTR.Harmony.Analyzer" Version="1.0.1.50" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+	<PackageReference Include="Bannerlord.MCM" Version="5.11.3" PrivateAssets="all" IncludeAssets="compile" />
   </ItemGroup>
 
   <ItemGroup>
