--- a/Bannerlord.ShipmasterReworked/Bannerlord.ShipmasterReworked.csproj
+++ b/Bannerlord.ShipmasterReworked/Bannerlord.ShipmasterReworked.csproj
@@ -47,7 +47,7 @@
 
   <ItemGroup>
     <Reference Include="NavalDLC" PrivateAssets="all" IncludeAssets="compile">
-      <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Mount &amp; Blade II Bannerlord\Modules\NavalDLC\bin\Win64_Shipping_Client\NavalDLC.dll</HintPath>
+      <HintPath>$(BANNERLORD_GAME_DIR)\Modules\NavalDLC\bin\Win64_Shipping_Client\NavalDLC.dll</HintPath>
       <Private>false</Private>
     </Reference>
   </ItemGroup>
