--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,8 @@ jobs:
   build-module:
     name: Build Module
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.version.outputs.version }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -52,25 +54,25 @@ jobs:
           name: bannerlord
           path: ./bannerlord/
 
-    publish-on-github:
-        needs: ["build-module"]
-        uses: BUTR/workflows/.github/workflows/release-github.yml@master
-        with:
-          mod_id: Bannerlord.ShipmasterReworked
-          mod_version: ${{ needs.build-module.outputs.version || github.ref_name }}
-          mod_description: ${{ github.event.release.body || 'Manual release' }}
-          artifact_name: bannerlord
+  publish-on-github:
+    needs: ["build-module"]
+    uses: BUTR/workflows/.github/workflows/release-github.yml@master
+    with:
+      mod_id: Bannerlord.ShipmasterReworked
+      mod_version: ${{ needs.build-module.outputs.version || github.ref_name }}
+      mod_description: ${{ github.event.release.body || 'Manual release' }}
+      artifact_name: bannerlord
 
-     publish-on-nexusmods:
-        needs: ["build-module"]
-        uses: BUTR/workflows/.github/workflows/release-nexusmods.yml@master
-        with:
-          nexusmods_game_id: mountandblade2bannerlord
-          nexusmods_mod_id: ${{ secrets.NEXUSMODS_MOD_ID }}
-          mod_filename: Bannerlord.ShipmasterReworked
-          mod_version: ${{ needs.build-module.outputs.version || github.ref_name }}
-          mod_description: ${{ github.event.release.body || 'Manual release' }}
-          artifact_name: bannerlord
-        secrets:
-          NEXUSMODS_APIKEY: ${{ secrets.NEXUSMODS_APIKEY }}
-          NEXUSMODS_COOKIES: ${{ secrets.NEXUSMODS_COOKIES }}
+  publish-on-nexusmods:
+    needs: ["build-module"]
+    uses: BUTR/workflows/.github/workflows/release-nexusmods.yml@master
+    with:
+      nexusmods_game_id: mountandblade2bannerlord
+      nexusmods_mod_id: ${{ secrets.NEXUSMODS_MOD_ID }}
+      mod_filename: Bannerlord.ShipmasterReworked
+      mod_version: ${{ needs.build-module.outputs.version || github.ref_name }}
+      mod_description: ${{ github.event.release.body || 'Manual release' }}
+      artifact_name: bannerlord
+    secrets:
+      NEXUSMODS_APIKEY: ${{ secrets.NEXUSMODS_APIKEY }}
+      NEXUSMODS_COOKIES: ${{ secrets.NEXUSMODS_COOKIES }}
